unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/project_cloud__Allocation_Summary__c.object-meta.xml
<CustomObject>
    <label>Allocation Summary</label>
    <nameField>
        <displayFormat>AS-{0000000000}</displayFormat>
        <label>Allocation Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>