unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/fields/project_cloud__Allocation_Group_Count__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Allocation_Group_Count__c</fullName>
    <inlineHelpText>A count of the total number of child Allocation Group records</inlineHelpText>
    <label>Allocation Groups</label>
    <summaryForeignKey>project_cloud__Allocation_Group__c.project_cloud__Allocation_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>