unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/fields/project_cloud__Available_Load__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Available_Load__c</fullName>
    <formula>MAX(1 - project_cloud__Allocated_Override_Load__c, 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MAX(1-Override Load)</inlineHelpText>
    <label>Available Load</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>