unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/fields/project_cloud__Balanced_Allocations__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Balanced_Allocations__c</fullName>
    <description>Number of allocation groups that do not have a load override</description>
    <inlineHelpText>Number of allocation groups that do not have a load override</inlineHelpText>
    <label>Balanced Allocations</label>
    <summaryFilterItems>
        <field>project_cloud__Allocation_Group__c.project_cloud__Load_Override__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>project_cloud__Allocation_Group__c.project_cloud__Allocation_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>