unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/fields/project_cloud__Balanced_Allocations_Test__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Balanced_Allocations_Test__c</fullName>
    <description>Deprecated field - Do not use</description>
    <label>Deprecated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>