unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/fields/project_cloud__Balanced_Hours_Day__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Balanced_Hours_Day__c</fullName>
    <formula>(project_cloud__Project_Task__r.project_cloud__Estimated_Hours__c * project_cloud__Available_Load__c) / project_cloud__Project_Task__r.project_cloud__Working_Total__c /*(Project_Task__r.Length__c - Project_Task__r.Non_Working__c)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Project Task estimated hours * Available Load / Project Task working days</inlineHelpText>
    <label>Balanced Hours Per Day (Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>