unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/fields/project_cloud__BAU__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__BAU__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The BAU that the Allocation Summary is related to</inlineHelpText>
    <label>Business As Usual</label>
    <referenceTo>project_cloud__BAU__c</referenceTo>
    <relationshipLabel>Allocation Summaries</relationshipLabel>
    <relationshipName>Allocation_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>