unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/fields/project_cloud__End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__End__c</fullName>
    <formula>IF(ISBLANK(project_cloud__Project_Task__c), project_cloud__Project__r.project_cloud__Calculated_End__c, project_cloud__Project_Task__r.project_cloud__End__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The end date of the Allocation Summary record, calculated by the Calculated End Date of the related Project Task</inlineHelpText>
    <label>End</label>
    <type>Date</type>
</CustomField>