unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/fields/project_cloud__Fully_Allocated__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Fully_Allocated__c</fullName>
    <formula>project_cloud__Allocation_Group_Count__c &gt; 0 &amp;&amp; project_cloud__Fully_Allocated_Groups__c == project_cloud__Allocation_Group_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if all Allocation Groups have been fully allocated</inlineHelpText>
    <label>Fully Allocated</label>
    <type>Checkbox</type>
</CustomField>