unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/fields/project_cloud__Fully_Allocated_Groups__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Fully_Allocated_Groups__c</fullName>
    <inlineHelpText>The count of Allocation Groups that have been fully allocated</inlineHelpText>
    <label>Fully Allocated Groups</label>
    <summaryFilterItems>
        <field>project_cloud__Allocation_Group__c.project_cloud__Fully_Allocated__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>project_cloud__Allocation_Group__c.project_cloud__Allocation_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>