unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/fields/project_cloud__Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_Worked__c</fullName>
    <inlineHelpText>The total number of hours worked by individuals assigned to the Project Task</inlineHelpText>
    <label>Hours Worked</label>
    <summarizedField>project_cloud__Allocation_Group__c.project_cloud__Hours_Worked__c</summarizedField>
    <summaryForeignKey>project_cloud__Allocation_Group__c.project_cloud__Allocation_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>