unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/fields/project_cloud__IsAllocated__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsAllocated__c</fullName>
    <formula>project_cloud__Allocation_Group_Count__c &gt; 0 &amp;&amp; project_cloud__Unallocated_Group_Count__c &lt; project_cloud__Allocation_Group_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether one or more Allocation Groups have been fully allocated</inlineHelpText>
    <label>IsAllocated</label>
    <type>Checkbox</type>
</CustomField>