unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/fields/project_cloud__Load_Unit__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Load_Unit__c</fullName>
    <formula>IF(project_cloud__Balanced_Allocations__c &gt; 0.0, project_cloud__Available_Load__c / project_cloud__Balanced_Allocations__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Available Load / Balanced Allocations</inlineHelpText>
    <label>Load Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>