unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/fields/project_cloud__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Project Task that the Allocation Summary is related to</inlineHelpText>
    <label>Project Task</label>
    <referenceTo>project_cloud__Project_Task__c</referenceTo>
    <relationshipLabel>Allocation Summaries</relationshipLabel>
    <relationshipName>Allocation_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>