unpackaged/main/default/objects/project_cloud__Allocation_Summary__c/fields/project_cloud__Unallocated_Group_Count__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Unallocated_Group_Count__c</fullName>
    <inlineHelpText>A count of the number of Allocation Groups that have not been Allocated</inlineHelpText>
    <label>Unallocated Group Count</label>
    <summaryFilterItems>
        <field>project_cloud__Allocation_Group__c.project_cloud__Allocated_Override_Load__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>project_cloud__Allocation_Group__c.project_cloud__Total_Subscriptions__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>project_cloud__Allocation_Group__c.project_cloud__Allocation_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>